--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "A learning implementation of HTML, SCSS and JavaScript.",
   "scripts": {
-    "start-live-server": "live-server",
+    "start-live-server": "start live-server",
     "transpile-sass": "sass --watch ./sass/main.scss:./styles.css --no-source-map",
-    "start": "npm-run-all transpile-sass start-live-server"
+    "start": "npm run start-live-server && npm run transpile-sass"
   },
   "author": "Selviraja Pasagadugula",
   "license": "ISC",
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "concurrently": "^7.0.0",
+    "sass": "^1.32.0",
+    "live-server": "^1.2.1"
   }
 }
